# 2Rarm_ROS2_demo

./: CMakeLists.txt  README.md  package.xml
config/: arm.yaml  demo.rviz
launch/: move_arm.py
msg/: EEF.msg  JointState.msg
src/: arm_node.cpp
urdf/: arm.urdf  arm.urdf.xacro
